--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/spotify-web-api-node": "^5.0.11",
     "@types/spotify-web-playback-sdk": "^0.1.19",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
@@ -17,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
